--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -1,46 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:layout_margin="1dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="3dp">
 
     <RelativeLayout
-        android:layout_margin="3dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        android:padding="8dp">
 
         <TextView
-            android:textStyle="bold"
             android:id="@+id/single_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
             android:textColor="@color/colorPrimaryDark"
-            tools:text="@tools:sample/lorem"/>
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="@tools:sample/lorem" />
 
         <TextView
             android:id="@+id/single_played_by"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
             android:layout_alignBaseline="@id/single_name"
-            android:textSize="16sp"
-            android:textStyle="italic"
+            android:layout_marginStart="3dp"
+            android:layout_toEndOf="@id/single_name"
             android:maxLines="1"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_toEndOf="@id/single_name"
-            tools:text="@tools:sample/lorem"/>
+            android:textSize="18sp"
+            android:textStyle="italic"
+            tools:text="@tools:sample/lorem" />
 
 
         <TextView
             android:id="@+id/single_titles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
             android:layout_below="@id/single_name"
+            android:maxLines="2"
             android:textColor="#000"
-            tools:text="@tools:sample/lorem/random"
-            android:maxLines="2"/>
+            android:textSize="18sp"
+            tools:text="@tools:sample/lorem/random" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
